# graviton-engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: engine.hpp  main.hpp  solver.hpp  system.hpp
src/: engine.cpp  main.cpp  solver.cpp  system.cpp
test/: test.cpp  test.hpp
